--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body.vc {
 }
 
 .abajo {
-    background-color: #0dc9f0;
+    background-color: #bda102;
 
 }
 
@@ -43,7 +43,7 @@ a.nav-link {
 .serv {
     width: 100%;
     margin: 10px 0;
-    background-color: #0dc9f0;
+    background-color: #2974b5;
     border-radius: 30px;
 }
 
@@ -63,21 +63,21 @@ form i {
 }
 
 .card-body {
-    background-color: #0dc9f0;
+    background-color: #2974b5;
 }
 
 .tooltip-custom .tooltip-inner {
-    background-color: #0dc9f0;
+    background-color: #2974b5;
 }
 
 .bs-tooltip-top .arrow::before,
 .bs-tooltip-auto[x-placement^="top"] .arrow::before {
-    border-top-color: #0dc9f0;
+    border-top-color: #2974b5;
 }
 
 /* FOOTER ======== */
 footer {
-    background-color: #0dc9f0;
+    background-color: #2974b5;
 }
 
 footer ul li i::before {
